# DELETE-DENIED

./: Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  SECURITY.md
.github/workflows/: release.yml
benchmarks/: hook-bench.ps1  hook-bench.sh  result.schema.json
bootstrap/: install.ps1  install.sh
crates/delete-denied-cli/: Cargo.toml
crates/delete-denied-cli/src/: app_server.rs  hooks.rs  lib.rs  main.rs
crates/delete-denied-cli/src/commands/: mod.rs
crates/delete-denied-cli/src/platform/: macos.rs  mod.rs  windows.rs
crates/delete-denied-cli/tests/: hooks_json.rs  install_contract.rs  release_binary.rs  trust_protocol.rs  user_lifecycle.rs
crates/delete-denied-core/: Cargo.toml
crates/delete-denied-core/src/: decision.rs  hook_input.rs  lib.rs  path.rs  policy.rs  scan.rs
crates/delete-denied-core/src/command/: cmd.rs  inline_runtime.rs  mod.rs  posix.rs  powershell.rs
crates/delete-denied-core/tests/: hook_input.rs  inline_runtime.rs  path_decisions.rs  posix_commands.rs  windows_commands.rs
crates/delete-denied-hook/: Cargo.toml
crates/delete-denied-hook/src/: main.rs
crates/delete-denied-hook/tests/: attack_matrix.rs  process_contract.rs
docs/: architecture.md  install.md  research.md  suspend-resume.md  threat-model.md
docs/evidence/: hook-benchmark-macos.json
tests/attack-matrix/: cases.json
tests/fixtures/: hook-rm-home.json  hook-safe.json  policy-macos.json
